SERVER-16101 replace DeleteExecutor with ParsedDelete