src/mongo/db/query/get_executor.h
@@ -31,6 +31,8 @@
 #include "mongo/db/query/query_planner_params.h"
 #include "mongo/db/query/query_settings.h"
 #include "mongo/db/query/query_solution.h"
+#include "mongo/db/ops/delete_request.h"
+#include "mongo/db/ops/parsed_delete.h"
 #include "mongo/db/ops/parsed_update.h"
 #include "mongo/db/ops/update_driver.h"
 #include "mongo/db/ops/update_request.h"
@@ -131,54 +133,24 @@ namespace mongo {
                             PlanExecutor::YieldPolicy yieldPolicy,
                             PlanExecutor** execOut);
 
-    //
-    // Delete
-    //
-
     /**
-     * Get a PlanExecutor for a delete operation.  'rawCanonicalQuery' describes the predicate for
-     * the documents to be deleted.  A write lock is required to execute the returned plan.
+     * Get a PlanExecutor for a delete operation. 'parsedDelete' describes the query predicate
+     * and delete flags like 'isMulti'. The caller must hold the appropriate MODE_X or MODE_IX
+     * locks, and must not release these locks until after the returned PlanExecutor is deleted.
      *
-     * Takes ownership of 'rawCanonicalQuery'.
+     * The returned PlanExecutor will yield if and only if parsedDelete->canYield().
+     *
+     * Does not take ownership of its arguments.
      *
      * If the query is valid and an executor could be created, returns Status::OK() and populates
-     * *out with the PlanExecutor.
+     * *execOut with the PlanExecutor. The caller takes ownership of *execOut.
      *
      * If the query cannot be executed, returns a Status indicating why.
      */
     Status getExecutorDelete(OperationContext* txn,
                              Collection* collection,
-                             CanonicalQuery* rawCanonicalQuery,
-                             bool isMulti,
-                             bool shouldCallLogOp,
-                             bool fromMigrate,
-                             bool isExplain,
-                             PlanExecutor::YieldPolicy yieldPolicy,
+                             ParsedDelete* parsedDelete,
                              PlanExecutor** execOut);
-
-    /**
-     * Overload of getExecutorDelete() above, for when a canonicalQuery is not available.  Used to
-     * support idhack-powered deletes.
-     *
-     * If the query is valid and an executor could be created, returns Status::OK() and populates
-     * *out with the PlanExecutor.
-     *
-     * If the query cannot be executed, returns a Status indicating why.
-     */
-    Status getExecutorDelete(OperationContext* txn,
-                             Collection* collection,
-                             const std::string& ns,
-                             const BSONObj& unparsedQuery,
-                             bool isMulti,
-                             bool shouldCallLogOp,
-                             bool fromMigrate,
-                             bool isExplain,
-                             PlanExecutor::YieldPolicy yieldPolicy,
-                             PlanExecutor** execOut);
-
-    //
-    // Update
-    //
 
     /**
      * Get a PlanExecutor for an update operation. 'parsedUpdate' describes the query predicate
@@ -200,10 +172,6 @@ namespace mongo {
                              ParsedUpdate* parsedUpdate,
                              OpDebug* opDebug,
                              PlanExecutor** execOut);
-
-    //
-    // Group
-    //
 
     /**
      * Get a PlanExecutor for a group operation.  'rawCanonicalQuery' describes the predicate for
